criando controller com scaffold

--- a/source/repos/SalesWebMVC/SalesWebMVC/appsettings.json
+++ b/source/repos/SalesWebMVC/SalesWebMVC/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-f9ed77ea-2f27-4cf7-be44-1b5be303f0d0;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
