--- a/source/repos/SalesWebMVC/SalesWebMVC/appsettings.json
+++ b/source/repos/SalesWebMVC/SalesWebMVC/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-f9ed77ea-2f27-4cf7-be44-1b5be303f0d0;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMVCContext": "server=localhost;userid=dev;password=080808;database=dbsalesmvc"
   }
 }
